added framework for better workflow!
created a better file structure, to organize my files better!

--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -150,7 +150,7 @@
         <div class="clone-options">
           <label class="checkbox-row">
             <input type="checkbox" id="cloneBackup" checked />
-            <span>Create Backup (.bak)</span>
+            <span>Create Backup (.zip)</span>
           </label>
 
           <label class="checkbox-row">
