--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -29,7 +29,7 @@
           <button id="youtubeBtn" class="nav-action youtube">🔴 YouTube</button>
           <button id="patreonBtn" class="nav-action patreon">⚠️ Patreon</button>
           <button id="githubBtn" class="nav-action github">⚠️ GitHub</button>
-          <button id="versionBtn" class="version-btn">0.2.5 DEV</button>
+          <button id="versionBtn" class="version-btn">0.3.0</button>
         </div>
       </nav>
     </header>
