--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -62,7 +62,7 @@
 
       <!-- Die Struktur für das benutzerdefinierte Dropdown-Menü -->
       <div class="profile-picker">
-        <span id="profileNameDisplay" data-translate="profile.select_profile">Select a profile</span>
+        <span id="profileNameDisplay" data-translate="profile.select_profile"></span>
         <button id="openProfileModal">▼</button>
         <!-- Container für die dynamisch generierte Dropdown-Liste -->
         <div id="profileDropdownList" class="custom-dropdown-list">
@@ -71,7 +71,7 @@
       </div>
 
       <div class="save-picker">
-        <span id="saveName" data-translate="profile.select_save">Select a save</span>
+        <span id="saveName" data-translate="profile.select_save"></span>
         <button id="openSaveModal">▼</button>
 
         <div id="saveDropdownList" class="dropdown-list"></div>
