feat: add website social link and bump version to 0.5.0
Add a new Website social link above YouTube in the sidebar, wire it to open https://www.xlieferant.dev/, and give it a distinct blue/cyan button style. Update UI version display to 0.5.0 and bump app version in Tauri config and Cargo manifest. Extend button translations to include the new website label (DE marked [NEEDS TRANSLATION]).

Files changed:
- src/index.html: add Website button above YouTube; update version button to 0.5.0
- src/main.js: register websiteBtn and openUrl handler
- src/styles.css: add .nav-action.website styles and hover effect
- src-tauri/tauri.conf.json: bump version to 0.5.0
- src-tauri/Cargo.toml: bump package version to 0.5.0
- src-tauri/Cargo.lock: lockfile updated
- src-tauri/locales/en.json, de.json, es.json, fr.json: add buttons.website key (DE as [NEEDS TRANSLATION])

--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -28,10 +28,11 @@
         </div>
 
         <div class="nav-bottom">
+          <button id="websiteBtn" class="nav-action website" data-translate="buttons.website">Website</button>
           <button id="youtubeBtn" class="nav-action youtube" data-translate="buttons.youtube">🔴 YouTube</button>
           <button id="patreonBtn" class="nav-action patreon" data-translate="buttons.patreon">⚠️ Patreon</button>
           <button id="githubBtn" class="nav-action github" data-translate="buttons.github">⚠️ GitHub</button>
-          <button id="versionBtn" class="version-btn">0.4.1</button>
+          <button id="versionBtn" class="version-btn">0.5.0</button>
         </div>
       </nav>
     </header>
