--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="nav-bottom">
-          <button id="websiteBtn" class="nav-action website" data-translate="buttons.website">Website</button>
+          <button id="websiteBtn" class="nav-action website" data-translate="buttons.website">🆕Website</button>
           <button id="youtubeBtn" class="nav-action youtube" data-translate="buttons.youtube">🔴 YouTube</button>
           <button id="patreonBtn" class="nav-action patreon" data-translate="buttons.patreon">⚠️ Patreon</button>
           <button id="githubBtn" class="nav-action github" data-translate="buttons.github">⚠️ GitHub</button>
