--- a/ets2-tool/src/index.html
+++ b/ets2-tool/src/index.html
@@ -154,18 +154,8 @@
 
         <div class="clone-options">
           <label class="checkbox-row">
-            <input type="checkbox" id="cloneBackup" checked />
+            <input type="checkbox" id="cloneBackup" checked disabled />
             <span data-translate="modals.clone_profile.create_backup">Create Backup (.zip)</span>
-          </label>
-
-          <label class="checkbox-row">
-            <input type="checkbox" id="cloneReplaceHex" checked />
-            <span data-translate="modals.clone_profile.replace_hex">Replace Hex Identifiers (Recommended)</span>
-          </label>
-
-          <label class="checkbox-row">
-            <input type="checkbox" id="cloneReplaceText" checked />
-            <span data-translate="modals.clone_profile.replace_text">Replace Text Names</span>
           </label>
         </div>
 
